Add calendar event notes
